Taboo: fixed broken center-align + fixed width turn-team-widget

--- a/src/css/taboo/room.css
+++ b/src/css/taboo/room.css
@@ -85,11 +85,13 @@
 /* taboo turn and teams widget */
 
 .taboo_turn_team {
+   margin: auto;
 }
 
 /* taboo turn word widget */
 
 .taboo_turn_word {
+   width: 400px;
 }
 
 .taboo_turn_word_secret_cell {
@@ -119,6 +121,7 @@
 
 .taboo_team_header {
    background: grey;
+   width: 200px;
 }
 
 .taboo_team_player {
